workx-rs/tui/src/history_cell/snapshots/workx_tui__history_cell__tests__session_header_indicates_yolo_mode.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
╭───────────────────────────────────────╮
│ >_ Workx (vtest)               │
│                                       │
│ model:       gpt-5   /model to change │
│ directory:   /tmp/project             │
│ permissions: YOLO mode                │
╰───────────────────────────────────────╯
