workx-rs/tui/src/history_cell/snapshots/workx_tui__history_cell__tests__standalone_windows_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│ ✨ Update available! 0.1.3 -> 9.9.9                                                                        │
│ Run powershell -ExecutionPolicy Bypass -c '$env:WORKX_NON_INTERACTIVE=1; irm                               │
│ https://chatgpt.com/codex/install.ps1 | iex' to update.                                                    │
│                                                                                                            │
│ See full release notes:                                                                                    │
│ https://github.com/RonanXiao/workx/releases/latest                                                         │
╰────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
