workx-rs/tui/src/history_cell/snapshots/workx_tui__history_cell__tests__vite_plus_update_available_history_cell_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
╭────────────────────────────────────────────────────╮
│ ✨ Update available! 0.1.2 -> 9.9.9                │
│ Run vp install -g @ronanxiao/workx to update.      │
│                                                    │
│ See full release notes:                            │
│ https://github.com/RonanXiao/workx/releases/latest │
╰────────────────────────────────────────────────────╯
